--- a/css/media.css
+++ b/css/media.css
@@ -1,12 +1,24 @@
-@media(max-width: 1110px) {
-    /* .recomend-block {
-        grid-template-columns: 1fr;
-        gap: 20px;
-    } */
+/* @media(min-width: 1400px) {
+    .right-recomend .item-category img {
+        width: 60%!important;
+    }
+} */
 
-    /* .right-recomend .item-category {
-        height: 300px;
-    } */
+@media(max-width: 1200px) {
+    #mainmenu {
+        inset: 0px auto auto -285px !important;
+    }
+}
+
+@media(max-width: 1110px) {
+    .dropdown-menu {
+        width: 230px;
+    }
+
+
+    .dropdown-submenu {
+        width: 230px;
+    }
 
     .right-recomend .item-category img {
         width: 25%;
@@ -20,6 +32,10 @@
         display: block;
     } */
 
+    .btn-group-product-filter .char-block {
+        text-align: left;
+    }
+
     .footer {
         grid-template-columns: 1fr 2fr;
     }
@@ -29,7 +45,7 @@
     }
 
     .right-product-filter {
-        display: grid;
+        /* display: grid; */
         gap: 20px;
         margin-top: 20px;
     }
@@ -87,9 +103,9 @@
         height: 300px;
     }
 
-    .gallery-vertical .thumbs-wrap {
-        top: 0;
-    }
+    /* .gallery-vertical .thumbs-wrap {
+        top: 60px;
+    } */
 
     .title-catalog {
         font-size: 24px;
@@ -126,12 +142,69 @@
         width: 20px;
         height: 20px;
     }
+
+    .modal-dialog {
+        width: 100%;
+        max-width: 100%;
+        margin: 0;
+    }
+
+    .grid-1 .card-img {
+        height: 100px;
+    }
+
+    .item-recomend.item-category {
+        min-height: 320px;
+    }
+
+    .right-recomend .item-category img {
+        width: 85% !important;
+    }
+
+    #views .owl-nav,
+    #views2 .owl-nav {
+        top: -83px !important;
+    }
+
+    .category-block .item-category {
+        height: 300px;
+    }
+
+    .category-block .img-catalog {
+        width: 230px !important;
+        height: 230px;
+    }
+}
+
+@media(max-width: 850px) {
+    .right-product-filter {
+        display: block;
+    }
+
+    .bottom-descr {
+        margin-bottom: 20px;
+    }
+
+    .btn-group-product-filter .btn-warning {
+        width: 100%;
+    }
 }
 
 @media(max-width: 768px) {
-    .menu-desktop{
+
+    .menu-desktop {
         display: none;
     }
+
+    .category-block .img-catalog {
+        width: 200px !important;
+        height: 200px;
+    }
+
+    .gallery-vertical .thumbs-wrap {
+        top: 0;
+    }
+
     .menu-768 {
         display: flex;
         justify-content: space-between;
@@ -199,13 +272,10 @@
         height: 300px;
     }
 
-    #views .owl-nav,
-    #views2 .owl-nav {
-        display: none !important;
-    }
+
 
     .item-recomend {
-        /* margin-right: 0; */
+        margin-right: 0;
     }
 
     .product-detail-block {
@@ -278,17 +348,21 @@
         gap: 10px;
     }
 
-    .btn-group-product-filter .char-block {
-        text-align: left;
-    }
+
 
     .img-catalog {
         width: 200px !important;
+        height: 200px;
     }
 
-    .item-recomend {
+    /* .item-recomend {
         margin-right: 0;
     }
+    .border-card{
+        width: auto;
+        width: 172px;
+        height: 172px;
+    } */
 
     .number-text {
         top: 0;
@@ -298,10 +372,6 @@
         display: none;
     }
 
-    .btn-group-product-filter .btn-warning {
-        width: 100%;
-    }
-
     .izbrannoe-title h3 {
         margin-bottom: 0;
     }
@@ -309,11 +379,31 @@
     .izbrannoe-title {
         align-items: center !important;
     }
+
+    .btn-group-product-filter .btn-default {
+        height: 38px;
+        width: 38px;
+        justify-content: center;
+    }
+
+    #modal-menu-768 {
+        margin-top: 80px;
+    }
+
+    .right-recomend .item-category img {
+        width: 200px !important;
+    }
+
 }
 
 @media(max-width: 600px) {
     .izbrannoe-title {
         display: grid !important;
+    }
+
+    #views .owl-nav,
+    #views2 .owl-nav {
+        display: none !important;
     }
 
     .menu-600 {
@@ -363,24 +453,25 @@
     }
 
     .title-catalog {
-        font-size: 28px;
+        font-size: 20px;
     }
 
     .img-catalog {
-        width: 150px !important;
+        width: 100px !important;
+        height: 100px;
     }
 
     .item-category {
-        height: 200px;
+        height: 120px;
     }
 
     .btn-group-product-filter {
-        flex-direction: column;
+        flex-direction: row;
     }
 
     .border-top-block .number-minus,
     .border-top-block .number-plus {
-        top: 0;
+        top: 3px;
     }
 
     .btn-group-product-filter {
@@ -406,7 +497,37 @@
     .izbrennoe-block .btn-group-product-filter {
         flex-direction: row;
     }
-    .link-catalog{
+
+    .link-catalog {
         display: none;
+    }
+
+    #modal-menu-768 {
+        margin-top: 100px;
+    }
+
+    #feedback-backdrop .d-flex {
+        display: grid !important;
+        gap: 15px;
+    }
+
+    /* .category-block .img-catalog{
+        width: 110px !important;
+        height: 110px;
+    } */
+    .item-recomend.item-category {
+        height: 200px;
+    }
+
+    .grid-2 .img-catalog {
+        object-fit: fill;
+        width: 50% !important;
+        height: 150px;
+    }
+
+    .right-recomend .item-category img {
+        width: 300px !important;
+        height: 150px;
+        object-fit: fill;
     }
 }
